fixtures/typescript/choke-point/should_fail/envInService.ts
// Application code accessing env directly
const port = process.env.PORT;
const host = process.env.HOST;
